first collission jump included and bottleBar bug fixed

--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ canvas {
     background-color: black;
 }
 
+.controls {
+    display:none;
+}
+
 @media only screen and (max-width: 720px) {
     canvas {
         width: 100%;
@@ -55,5 +59,10 @@ canvas {
     }
     .container {
         padding-top: 0;
+    }
+    .controls {
+        display: block;
+        position: fixed;
+        width: 100%;
     }
 }
